# visualization

./: .gitignore  .travis.yml  Jenkinsfile  README.md  pyproject.toml  requirements.txt  setup.py  travis.yml
.github/workflows/: deptry.yml  git-extension.yml  numpydoc.yml  wiki.yml
animation/: plot_srf_animation.py  plot_ts.py
compare/: compare_runs.py
comparisons/: im_rrup.py  im_rrup_temp.py  im_rrup_with_emp.py  psa_bias.py  psa_ratios.py  psa_ratios_rrup.py  psa_sim_obs.py  waveforms_sim_obs.py
cybershake/: README.md  scenario_data.py  scenario_epsilon.py  scenario_epsilon_config.yaml  scenario_im_fault.py  scenario_im_fault_config.yaml  scenario_ratios.py  scenario_ratios_config.yaml
gmt/: params_plot.py  params_plot.template.py  plot_deagg.py  plot_items.py  plot_srf_map.py  plot_srf_map_global.py  plot_srf_square.py  plot_stations.py  plot_transfer.py  plot_ts.py
im/: im_ratios.py  im_rrup_mean.py  plot_disagg.py  psa_bias.py  psa_comparisons.py  psa_ratios_rrup.py  spatialise_im.py  summarise_all_rels_im.py
im_plotting/: common.py  generate_im_plot.py  im_plot.py
prototype/: plot_proximity.py  spatial_im_rrup_epsilon_plot.py
sources/: FAULTS_20161219.ll  gsf_plot.py  plot_fault_and_vm_domain.py  plot_items.py  plot_srf_map.py  plot_srf_slip_rise_rake.py  plot_vm_depths.py
test/test_im_plotting/: test_im_plot.py
tests/: test_plots.py
tests/srfs/: realisation.json
visualisation/: utils.py
visualisation/sources/: plot_mw_contributions.py  plot_rakes.py  plot_rise.py  plot_slip_rise_rake.py  plot_srf.py  plot_srf_cumulative_moment.py  plot_srf_distribution.py  plot_srf_moment.py
visualization/: config.py  im_rrup_mean.py  plot_items_wrapper.py  psa_sim_obs.py  util.py  waveforms_sim_obs.py
visualization/comparisons/: im_rrup.py  im_rrup_mean.py  psa_bias.py  psa_ratios.py  psa_ratios_rrup.py  spatial_im_rrup_epsilon_plot.py  waveforms_sim_sim.py
visualization/gmt/: params_plot.template.py  plot_deagg.py  plot_disagg_seistech.py  plot_faults.py  plot_faults_srf.py  plot_gen_seismo.py  plot_geotiff.py  plot_items.py  plot_obs.py  plot_options.yaml  plot_proximity.py  plot_seismo_single.py  plot_snapped_station.py  plot_srf_map.py  plot_srf_map_2.py  plot_srf_map_global.py  plot_srf_perspective.py  plot_srf_square.py  plot_stations.py  plot_transfer.py  plot_ts.py  plot_ts_sum.py  plotting.py  (+3 more)
waveform/: waveforms.py  waveforms_sim_obs.py  waveforms_sim_sim.py
wiki/: Sources.md
(+21 files in other folders)
